# lab2IP

./: CMakeLists.txt  Makefile  README.md
app/: main.cpp
include/: algorithms.hpp  generators.hpp  graph.hpp  metrics.hpp  parsers.hpp  serializers.hpp
src/: algorithms.cpp  generators.cpp  graph.cpp  metrics.cpp  parsers.cpp  serializers.cpp
tests/: test_main.cpp
